web/static/css/_ncd.scss
/* ... */
.collection-item.header {
  padding: 25px 15px 25px 9px;
  height: 80px;
  .material-icons.prefix {
    @extend .grey-text, .lighten-2;
    font-size: 1.6rem;
    top: 1.8rem;
  }
  input[type=text] {
    font-size: 20px;
    border-bottom: none;
    width: 78%;
    margin-bottom: 0px;
    margin-top: -10px;
    margin-left: 15px;
  }
  .collapse {
    @extend .grey-text, .lighten-2;
    margin-right: -10px;
  }
  .dropdown-content li a, .dropdown-button {
    @extend .black-text;
  }
  .row , input {
    margin-bottom: 0;
  }
  a.page-title {
    @extend .black-text;
    font-size: 20px;
    line-height: 1.35;
    max-width: 80%;
    margin-left: 15px;
    float: left;
    i {
      @extend .grey-text, .lighten-2;
      font-size: 24px;
      display: inline-block;
      vertical-align: top;
      margin-left: 15px;
    }
  }
}


.sms-attempts, .ivr-attempts {
  li {
    display: inline-block;
    vertical-align: text-top;
    margin-right: 15px;
    position: relative;
    span {
      @extend .grey-text, .lighten-2;
      font-size: 12px;
      display: inline-block;
      padding: 0 15px 0 12px;
      vertical-align: bottom;
      border-top: 1px solid color('grey', 'lighten-2');
      position: relative;
      &:after {
        content: 'keyboard_arrow_right';
        font-family: 'Material Icons';
        font-weight: normal;
        font-style: normal;
        font-size: 11px;
        line-height: 1.158;
        letter-spacing: normal;
        text-transform: none;
        text-rendering: optimizeLegibility;
        font-feature-settings: 'liga';
        position: absolute;
        top: -6px;
        right: -6px;
        opacity: 0.4;
      }
    }
    &:after {
      @extend .black-text;
      font-family: 'Material Icons';
      font-weight: normal;
      font-style: normal;
      font-size: 24px;
      line-height: 1;
      letter-spacing: normal;
      text-transform: none;
      text-rendering: optimizeLegibility;
      font-feature-settings: 'liga';
      margin-left: 10px;
    }
    &:first-child {
      i {
        margin-right: 10px;
      }
      &:after {
        display: none;
      }
    }
  }
}

.sms-attempts {
  li {
    &:after {
      content: 'sms';
    }
  }
}

.ivr-attempts {
  li {
    &:after {
      content: 'phone';
    }
  }
}

.audio-section {
  position: relative;
  padding-left: 10px;
  .audio-dropdown {
    display: inline-block;
    width: 25%;
    min-width: 145px;
  }
  .upload-audio {
    padding-top: 20px;
  }
  audio {
    position: absolute;
    right: 5px;
    top: 0px;
    width: 74%;
  }
}

// ------- Forms --------------

.dropfile {
  @include  transition(border-color ease-in-out .2s);
  @extend .grey-text;
  font-size: 18px;
  width: 100%;
  height: 350px;
  border: 2px dashed color("grey", "lighten-3");
  position: relative;
  cursor: pointer;
  .drop-icon {
    @include  transition(color ease-in-out .2s);
    color: inherit;
    position: absolute;
    width: 20%;
    top: calc(50% - 70px);
    margin: 0 40%;
    &:before {
      content: 'insert_drive_file';
      font-family: 'Material Icons';
      font-size: 50px;
      position: absolute;
      top: 0;
      width: 100%;
      text-align: center;
    }
  }
  .drop-text {
    @include  transition(color ease-in-out .2s);
    color: inherit;
    position: absolute;
    width: 70%;
    top: 50%;
    margin: 0 15%;
    &.csv:before {
      content: 'Drop your CSV file here, or click to browse';
      text-align: center;
      position: absolute;
      width: 100%;
      text-align: center;
    }
    &.audio:before {
      content: 'Drop your Audio file here, or click to browse';
      text-align: center;
      position: absolute;
      width: 100%;
      text-align: center;
    }
  }
  &.active {
    @extend .blue-text, .lighten-1;
    border-color: color("blue", "lighten-1");
    .drop-text:before {
      content: 'Drop your file to start uploading';
    }
  }
  &.rejectedfile {
    @extend .red-text;
    border-color: color("red", "lighten-1");
    .drop-icon:before {
      content: 'block';
    }
    .drop-text:before {
      content: 'Invalid file type';
    }
  }
  &.audio {
    height: 80px;
    .drop-icon {
      top: 10px;
      &:before {
        font-size: 30px;
      }
    }
    .drop-text {
      font-size: 90%;
      width: 90%;
      margin: 0 5%;
    }

  }
}


.select-wrapper {
  .caret {
    @extend .transparent-text;
    font-family: Arial, Helvetica, 'san-serif';
    position: relative;
    width: 25px;
    &:after {
      content: 'keyboard_arrow_down';
      font-family: 'Material Icons';
      @extend .black-text;
      font-size: 20px;
      line-height: 1;
      position: absolute;
      top: 0;
      right: 0;
    }
  }
  .dropdown-content {
    li {
      span {
        @extend .black-text;
      }
    }
  }
}

.collection.collection-card {
  overflow: visible;
}



.character-counter {
  @extend .grey-text, .lighten-2;
}

.input-field.inline {
  min-width: 250px;
}


// ------- helper classes -----------

.mtop {
  margin-top: -8rem;
}

.v-middle {
  vertical-align: middle;
}

.no-padd {
  padding: 0;
}

.empty_page {
  @extend .grey-text;
  text-align: center;
  i {
    font-size: 180px;
  }
}

.btn-flat-link {
  color: $link-color;
}

label {
  color: $primary-color;
}

.small-text-bellow {
  @extend .grey-text, .lighten-2;
  font-size: 14px;
  margin-top: -18px;
  margin-bottom: 22px;
  display: block;
}



// ------- Respondent Chart SVG classes -----------

.line.respondentsData {
  fill: none;
  stroke: #4caf50;
  stroke-width: 2.0px;
}

.line.backgroundData {
  fill: none;
  stroke: #999;
  stroke-width: 0.75px;
}

.axis line, .axis path{
  fill: none;
  stroke: #000;
  stroke-width: 1.0;
  opacity: 0.25;
}

.axis > path{
  stroke: none;
}

.y.axis g:first-child text{
  fill: none;
}

.x.axis .tick line{
  stroke: none;
}

.axis text {
  text-transform: uppercase;
  dominant-baseline:text-after-edge;
  font-size: 12px;
  opacity: 0.25;
}
/* ... */

